--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:theme="@style/AppBaseTheme">
         <activity
                 android:name="com.medicenter.medicenterphysician.Login_Activity"
                 android:label="@string/app_name"
